# swarm-host

./: .gitignore  Cargo.toml  README.md
app/: app.js  graph.js  index.html
examples/: template.py
framework/: block-announce-filter.py  context.py  core.py  framework.py  main.py  notification.py  preinit.py  proto.py  request-response.py  sup-sync-2.py  test.py  transaction-filter.py
framework/backend/: mockchain.py
framework/backend/substrate/: block_announce.py  block_request.py  block_response.py  node.py
framework/examples/: README.md  covert-flash.py
framework/swarm_host/: filter.py  swarm_host.py
framework/swarm_host/backend/substrate/: node.py  swarm_host.py
framework/swarm_host/backend/substrate/filters/: block-announce-filter.py  block-announces-1.py  context.py  preinit.py  sup-sync-2.py
framework/swarm_host/backend/substrate/primitives/: block_announce.py
framework/utils/: context.py  swarm_host.py
misc/mockchain/: Cargo.toml  README.md
misc/mockchain/src/: chainstate.rs  gossip.rs  main.rs  p2p.rs  rpc.rs  types.rs
notes/: requests
poc/: client.py  swarm-host.py
rename/: core.py  swarm-host-rpc-clien.py
rename/backend/: mockchain.py
rename/utils/: swarm_host.py
src/: error.rs  main.rs  overseer.rs  rpc.rs  sybil.rs  types.rs  utils.rs
src/backend/: mod.rs
src/backend/mockchain/: masquerade.rs  mod.rs  node_backed.rs  p2p.rs  types.rs
src/backend/substrate/: mod.rs  network.rs
src/backend/substrate/network/: Cargo.toml  behaviour.rs  config.rs  discovery.rs  mod.rs  network_state.rs  peer_info.rs  protocol.rs  request_responses.rs  service.rs  transport.rs
src/backend/substrate/network/common/: Cargo.toml  config.rs  error.rs  protocol.rs  request_responses.rs  service.rs  sync.rs
src/backend/substrate/network/common/protocol/: event.rs
src/backend/substrate/network/common/src/: config.rs  error.rs  request_responses.rs  service.rs  sync.rs  utils.rs
src/backend/substrate/network/common/src/protocol/: event.rs  role.rs
src/backend/substrate/network/common/src/service/: signature.rs
src/backend/substrate/network/common/src/sync/: message.rs
src/backend/substrate/network/common/sync/: message.rs  warp.rs
src/backend/substrate/network/peerset/: Cargo.toml  mod.rs  peersstate.rs
src/backend/substrate/network/peerset/src/: lib.rs  peersstate.rs
src/backend/substrate/network/peerset/tests/: fuzz.rs
src/backend/substrate/network/protocol/: message.rs
src/backend/substrate/network/protocol/notifications/: behaviour.rs  handler.rs  tests.rs
src/backend/substrate/network/protocol/notifications/upgrade/: collec.rs  notifications.rs
src/backend/substrate/network/src/: behaviour.rs  config.rs  discovery.rs  lib.rs  peer_info.rs  protocol.rs  request_responses.rs  service.rs
src/backend/substrate/network/src/protocol/: message.rs  notifications.rs
src/backend/substrate/network/src/protocol/notifications/: behaviour.rs  handler.rs  tests.rs  upgrade.rs
src/backend/substrate/network/src/protocol/notifications/upgrade/: notifications.rs
src/backend/substrate/substrate/: Cargo.toml
src/backend/substrate/substrate/client/consensus/common/src/import_queue/: basic_queue.rs
src/backend/substrate/substrate/client/db/: Cargo.toml
src/backend/substrate/substrate/client/finality-grandpa/src/communication/: gossip.rs
src/backend/substrate/substrate/client/network/: Cargo.toml
src/backend/substrate/substrate/client/network-gossip/src/: bridge.rs  state_machine.rs  validator.rs
src/backend/substrate/substrate/client/network/common/src/protocol/: event.rs
src/backend/substrate/substrate/client/network/src/: behaviour.rs  config.rs  discovery.rs  lib.rs  protocol.rs  service.rs
src/backend/substrate/substrate/client/network/src/protocol/: message.rs
src/backend/substrate/substrate/client/network/src/protocol/notifications/: behaviour.rs  handler.rs
src/backend/substrate/substrate/client/network/src/service/: out_events.rs
src/backend/substrate/substrate/client/network/transactions/src/: lib.rs
src/backend/substrate/substrate/client/service/src/: builder.rs  lib.rs
src/backend/substrate/substrate/client/transaction-pool/src/: api.rs  lib.rs
src/backend/substrate/tests/: mod.rs
src/executor/: mod.rs  pyo3.rs  python.rs
src/executor/pyo3/: conversion.rs  mod.rs  tests.rs
src/filter/: mod.rs  tests.rs
src/filter/executor/: mod.rs
src/filter/tests/: filter.rs  interface.rs  mod.rs  notification.rs  request_response.rs
src/filter/tests/filters/: inject_request_and_response.py
src/heuristics/: mod.rs  peer.rs
src/sybil/: interface.rs  mod.rs  types.rs
