[package]
name = "swarm-host"
description = "Tool for protocol simulation"
license = "GPL-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
array-bytes = "6.0.0"
async-stream = "0.3.4"
async-trait = "0.1.64"
clap = { version = "4.1.4", features = ["derive"] }
futures = "0.3.25"
hex = "0.4.3"
jsonrpsee = { version = "0.16.2", features = ["full"] }
mockall = "0.11.4"
petgraph = "0.6.3"
pin-project = "1.0.12"
pyo3 = { version = "0.18.1", features = ["auto-initialize"] }
rand = "0.8.5"
serde_cbor = "0.11.2"
serde_json = "1.0.96"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
tokio-stream = "0.1.11"
tokio-tungstenite = "0.18.0"
tokio-util = "0.7.4"
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["tracing-log", "env-filter"] }

# Substrate dependencies
asynchronous-codec = "0.6"
backtrace = "0.3.67"
bitflags = "1.3.2"
bytes = "1"
codec = { package = "parity-scale-codec", version = "3.2.2", features = ["derive"] }
either = "1.5.3"
fnv = "1.0.6"
futures-timer = "3.0.2"
ip_network = "0.4.1"
libp2p = { version = "0.50.0", features = ["dns", "identify", "kad", "macros", "mdns", "mplex", "noise", "ping", "tcp",  "tokio", "yamux", "websocket", "request-response"] }
linked_hash_set = "0.1.3"
log = "0.4.17"
lru = "0.8.1"
parking_lot = "0.12.1"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate" }
sc-block-builder = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate" }
sc-utils = "7.0.0"
smallvec = "1.8.0"
sp-arithmetic = { version = "6.0.0", git = "https://github.com/paritytech/substrate" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
sp-consensus-grandpa = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate" }
sp-core = { version = "7.0.0", git = "https://github.com/paritytech/substrate" }
sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate" }
unsigned-varint = { version = "0.7.1", features = ["futures", "asynchronous_codec"] }
wasm-timer = "0.2"
zeroize = "1.4.3"

