[package]
name = "mockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.1", features = ["derive"] }
futures = "0.3.25"
jsonrpsee = { version = "0.16.2", features = ["jsonrpsee-server", "jsonrpsee-core", "server-core", "server", "full"] }
rand = "0.8.5"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_cbor = "0.11.2"
service = "0.0.0"
tokio = { version = "1.24.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
