[package]
description = "Substrate network common"
name = "sc-network-common"
version = "0.10.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
documentation = "https://docs.rs/sc-network-sync"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
prost-build = "0.11"

[dependencies]
array-bytes = "4.1"
async-trait = "0.1.57"
bitflags = "1.3.2"
bytes = "1"
codec = { package = "parity-scale-codec", version = "3.2.2", features = [
	"derive",
] }
futures = "0.3.21"
futures-timer = "3.0.2"
libp2p = { version = "0.50.0", features = ["request-response", "kad"] }
linked_hash_set = "0.1.3"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate" }
smallvec = "1.8.0"
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate" }
sc-peerset = { version = "4.0.0-dev", path = "../peerset" }
sc-utils = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
serde = { version = "1.0.136", features = ["derive"] }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate" }
sp-consensus-grandpa = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate" }
thiserror = "1.0"
zeroize = "1.4.3"

[dev-dependencies]
tempfile = "3.1.0"
